k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-management-service
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: media-management-service
