k8s/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: media-management-service
spec:
  podSelector:
    matchLabels:
      app: media-management-service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              part-of: recipe-web-app
      ports:
        - protocol: TCP
          port: 3000
